@@ -1,23 +1,29 @@
-# KoffeinKoll
-
 Welcome to KoffeinKoll, Your Caffeine Companion!
 
-KoffeinKoll is a desktop application designed to help you monitor your caffeine intake. Personalize your profile,
-log your consumption, and gain insights into your habits. Whether you're optimizing lifestyle choices or aiming,
-to reduce caffeine intake, KoffeinKoll is here for you. 
-Our app calculates your recommended daily intake, tracks consumption, and predicts caffeine processing time. 
-Join us in enhancing health and wellness, one sip at a time.
-                  
-Disclaimer:
-Please note that the methods used in KoffeinKoll are not scientifically proven. 
-While we strive to provide accurate information and support healthy habits, individual responses 
-to caffeine may vary. It's always best to consult with a healthcare professional for personalized advice.
+KoffeinKoll is a desktop application designed to help you monitor your caffeine intake. Personalize your profile, log your consumption, and gain insights into your habits. Whether you"re optimizing lifestyle choices or aiming to reduce caffeine intake, KoffeinKoll is here for you. Our app calculates your recommended daily intake, tracks consumption, and predicts caffeine processing time. Join us in enhancing health and wellness, one sip at a time.
+
+Disclaimer: Please note that the methods used in KoffeinKoll are not scientifically proven. While we strive to provide accurate information and support healthy habits, individual responses to caffeine may vary. It"s always best to consult with a healthcare professional for personalized advice.
+
+ Getting Started
+
+1. Download JDK 21 if you haven"t already.
+2. Navigate to "Plugins" and ensure Maven is installed (should be listed as "Disable").
+3. If Maven is not installed, install it.
+4. Go to "Build, Execution, Deployment" -> "Build Tools -> Maven.
+5. Check "Use plugin registry", then click "Apply" and "OK".
+6. Go to [gluonhq.com](https://gluonhq.com/) and select "Products" -> "JavaFX Downloads".
+7. Download JavaFX Version 22 for your operating system and architecture.
+8. Go to "IntelliJ IDEA" -> "Settings" -> "Appearance and Behaviors" -> "Path Variables".
+9. Click "+" and add "JavaFX22" as the name.
+10. Click "Browse" next to "Value", navigate to the downloaded JavaFX folder, select "lib", then click "Open", "OK", "Apply", and "OK".
+11. Click the three dots in the top-right corner and select "Edit".
+12. Click "Modify options" -> "Add VM options".
+13. In the "VM options" field, add: "--module-path "$JavaFX22$" --add-modules javafx.controls".
+14. Click "Apply" and "OK".
+
+ Starting the Application:
+
+To initiate the application, ensure access to the connected database. Then, execute the StartApplication class to begin.
 
 
-Start application:
-To initiate the application, ensure access to the database connected to KoffeinKoll. 
-Then, execute the "StartApplication" class to begin.
-
-
-Created 2024
-Alanah Coleman, Elias Olsson, Kenan Al Tal, Louis Brown, and Ida Nordenswan
+Created 2024 by Alanah Coleman, Elias Olsson, Kenan Al Tal, Louis Brown, and Ida Nordenswan.
